--- a/.classpath
+++ b/.classpath
@@ -18,6 +18,7 @@
 	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/log4j-api-2.8.jar"/>
 	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/log4j-core-2.8.jar"/>
 	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/mysql-connector-java-5.1.22-bin.jar"/>
-	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/commons-fileupload-1.3.2.jar"/>
+	<classpathentry kind="lib" path="D:/Project/Roulette/WebContent/WEB-INF/lib/junit-4.12.jar"/>
+	<classpathentry kind="lib" path="D:/Project/Roulette/WebContent/WEB-INF/lib/hamcrest-core-1.3.jar"/>
 	<classpathentry kind="output" path="build/classes"/>
 </classpath>
